# ai-threat-detection-system

./: .dockerignore  .gitignore  CIC_IDS2017_like_dataset_5000.csv  DEPLOYMENT.md  PROJECT_ANALYSIS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 295cf96b80a5_add_detectionsession_table.py  3b9cca423480_add_system_events_and_processing_latency.py  3eaf9ef40edd_add_prediction_tables.py  527fd520aa64_initial_setup.py  54e620ee9852_add_datasets_table.py  55411fac9507_add_preprocessing_tables.py  8d1269c8dd2c_enable_rls_on_all_tables.py  999999999999_add_training_progress.py  b14f8b151a45_add_training_tables.py  f036b7da3d06_add_auth_tables.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  base_trainer.py  decision_tree.py  factory.py  isolation_forest.py  logistic_regression.py  random_forest.py
backend/app/auth/: dependencies.py  hashing.py  jwt.py
backend/app/capture/: detection_session.py  live_capture.py  packet_capture.py  pcap_reader.py
backend/app/core/: events.py  exception_handlers.py  exceptions.py  limiter.py  logger.py  preprocessor.py
backend/app/database/: base.py  base_models.py  session.py
backend/app/detection/: routers.py  schemas.py  services.py
backend/tests/: conftest.py  test_analytics.py  test_auth.py  test_core_infrastructure.py  test_datasets.py  test_detection.py  test_event_store.py  test_health.py  test_main.py  test_predictions.py  test_preprocessing.py  test_threat_intelligence.py  test_training.py
(+86 files in other folders)
